--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.2
-tensorflow==2.7.0
-numpy==1.19.5
+tensorflow==2.15.1
+numpy==1.23.5  # Updated for compatibility
 pandas==1.3.3
 scikit-learn==0.24.2
 gunicorn==20.1.0
